Migrate to valkey

--- a/apps/betterangels-backend/.env
+++ b/apps/betterangels-backend/.env
@@ -28,10 +28,10 @@ SOCIALACCOUNT_GOOGLE_SECRET="<SOCIALACCOUNT_GOOGLE_SECRET>"
 GOOGLE_MAPS_API_KEY="<GOOGLE_MAPS_API_KEY>"
 
 # Cache
-DJANGO_CACHE_URL=redis://redis:6379/0
+DJANGO_CACHE_URL=redis://valkey:6379/0
 
 # Celery
-CELERY_BROKER_URL=redis://redis:6379/1
+CELERY_BROKER_URL=redis://valkey:6379/1
 CELERY_REDBEAT_URL=redis://localhost:6379/2
 
 # Site Security
