--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -128,7 +128,7 @@ jobs:
           yarn nx affected -t validate-graphql-schema
           STATUS=$?
           if [ $STATUS -ne 0 ]; then
-            echo "Error: The GraphQL schemas do not match! Make sure you have run 'yarn nx run-many -t generate-graphql-schema' locally and committed the changes."
+            echo "Error: The GraphQL schemas do not match! Make sure you have run 'yarn nx affected -t generate-graphql-schema' locally and committed the changes."
             exit 1
           else
             echo "Success: The GraphQL schemas match!"
@@ -139,7 +139,7 @@ jobs:
           git diff --exit-code;
           DIFF_STATUS=$?
           if [ $TYPE_GEN_STATUS -ne 0 ] || [ $DIFF_STATUS -ne 0 ]; then
-            echo "Error: The GraphQL types do not match or generation failed! Make sure you have run 'yarn nx run-many -t generate-graphql-types' locally and committed the changes."
+            echo "Error: The GraphQL types do not match or generation failed! Make sure you have run 'yarn nx affected -t generate-graphql-types' locally and committed the changes."
             exit 1
           else
             echo "Success: The GraphQL types match!"
