--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -125,21 +125,21 @@ jobs:
         # TODO: Upon graphql mismatch, a github action could commit the changes and push into the branch
         run: |
           docker compose run better-angels bash <<'EOF'
-          yarn nx affected -t validate-graphql-schema
+          yarn nx run-many -t validate-graphql-schema
           STATUS=$?
           if [ $STATUS -ne 0 ]; then
-            echo "Error: The GraphQL schemas do not match! Make sure you have run 'yarn nx affected -t generate-graphql-schema' locally and committed the changes."
+            echo "Error: The GraphQL schemas do not match! Make sure you have run 'yarn nx run-many -t generate-graphql-schema' locally and committed the changes."
             exit 1
           else
             echo "Success: The GraphQL schemas match!"
           fi
 
-          yarn nx affected -t generate-graphql-types
+          yarn nx run-many -t generate-graphql-types
           TYPE_GEN_STATUS=$?
           git diff --exit-code;
           DIFF_STATUS=$?
           if [ $TYPE_GEN_STATUS -ne 0 ] || [ $DIFF_STATUS -ne 0 ]; then
-            echo "Error: The GraphQL types do not match or generation failed! Make sure you have run 'yarn nx affected -t generate-graphql-types' locally and committed the changes."
+            echo "Error: The GraphQL types do not match or generation failed! Make sure you have run 'yarn nx run-many -t generate-graphql-types' locally and committed the changes."
             exit 1
           else
             echo "Success: The GraphQL types match!"
