--- a/libs/react/shelter/project.json
+++ b/libs/react/shelter/project.json
@@ -4,5 +4,22 @@
   "sourceRoot": "libs/react/shelter/src",
   "projectType": "library",
   "tags": [],
-  "targets": {}
+  "namedInputs": {
+    "default": [
+      "{projectRoot}/**/*",
+      "{workspaceRoot}/apps/betterangels-backend/schema.graphql"
+    ]
+  },
+  "targets": {
+    "generate-graphql-types": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "libs/react/shelter",
+        "command": "graphql-codegen --config codegen.ts"
+      },
+      "outputs": [
+        "{workspaceRoot}/libs/react/shelter/src/lib/**/__generated__/"
+      ]
+    }
+  }
 }
