--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "haversine-distance": "^1.2.3",
     "i": "^0.3.7",
     "jotai": "^2.10.3",
+    "libphonenumber-js": "^1.12.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-ga4": "^2.1.0",
