--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -165,6 +165,10 @@ jobs:
           role-session-name: GitHub_to_AWS_via_FederatedOIDC
           aws-region: ${{ env.AWS_REGION }}
 
+      - name: 🐳 Login to Amazon ECR
+        uses: aws-actions/amazon-ecr-login@v2
+        if: ${{ env.BRANCH_NAME == 'main' }}
+
       - name: 🛠️ Build and Push Artifacts
         if: ${{ env.BRANCH_NAME == 'main' }}
         run: |
@@ -175,10 +179,6 @@ jobs:
         env:
           AWS_ACCOUNT_ID: ${{ env.AWS_ACCOUNT_ID }}
           INPUT_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: 🐳 Login to Amazon ECR
-        uses: aws-actions/amazon-ecr-login@v2
-        # if: ${{ env.BRANCH_NAME == 'main' }}
 
       - name: 🏗️ Push Monorepo Docker image
         run: |
