--- a/apps/betterangels/package.json
+++ b/apps/betterangels/package.json
@@ -68,7 +68,9 @@
     "expo-web-browser": "*",
     "react-native-open-maps": "*",
     "expo-location": "*",
-    "expo-dev-client": "*"
+    "expo-dev-client": "*",
+    "expo-constants": "*",
+    "expo-application": "*"
   },
   "scripts": {
     "eas-build-pre-install": "corepack enable",
