enable hmis edit button with hmis list view

--- a/apps/betterangels/package.json
+++ b/apps/betterangels/package.json
@@ -70,7 +70,8 @@
     "expo-location": "*",
     "expo-dev-client": "*",
     "expo-constants": "*",
-    "expo-application": "*"
+    "expo-application": "*",
+    "@react-navigation/native-stack": "*"
   },
   "scripts": {
     "eas-build-pre-install": "corepack enable",
