--- a/apps/shelter-web/project.json
+++ b/apps/shelter-web/project.json
@@ -12,20 +12,25 @@
         "jestConfig": "apps/shelter-web/jest.config.ts"
       }
     },
+    "set-env": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "node tools/scripts/set-base-path.js"
+      },
+      "configurations": {
+        "production": {},
+        "preview": {}
+      }
+    },
     "build": {
       "executor": "@nx/vite:build",
       "options": {
         "outputPath": "dist/apps/shelter-web",
         "configFile": "apps/shelter-web/vite.config.mts"
       },
-      "defaultConfiguration": "production",
       "configurations": {
-        "production": {
-          "mode": "production"
-        },
-        "development": {
-          "mode": "development"
-        }
+        "production": {},
+        "preview": {}
       }
     }
   }
