--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ skip_glob = ["*/migrations/*"]
 
 [tool.poetry.dependencies]
 python = "3.13.2"
+django-s3file = "^5.5.7"
 
 [tool.poetry.dependencies.betterangels-backend]
 path = "apps/betterangels-backend"
