--- a/apps/shelter-web/.env.deploy.preview
+++ b/apps/shelter-web/.env.deploy.preview
@@ -1,2 +1,3 @@
 S3_BUCKET=development-us-west-2-shelter-web
 CF_DISTRIBUTION_ID=E3O1PERRKPOUDF
+ASSUME_ROLE=arn:aws:iam::174477281453:role/github-actions-deploy
