--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -189,8 +189,7 @@ jobs:
         run: |
           docker compose run better-angels bash <<'EOF'
           # Exclude Betterangels Frontend Given its CI is not setup yet
-          yarn nx affected -t build:preview --exclude=^betterangels$,^shelter$,^nginx$
-          yarn nx affected -t deploy:preview --exclude=^betterangels$,^shelter$,^nginx$
+          yarn nx affected -t deploy:preview --exclude=^betterangels$,^shelter$,^nginx$ --configuration preview
           EOF
 
       - name: ⏹️ Spin down monorepo environment
