--- a/apps/nginx/project.json
+++ b/apps/nginx/project.json
@@ -26,7 +26,14 @@
       }
     },
     "deploy": {
-      "command": "tools/deploy/ecs_deploy.sh"
+      "configurations": {
+        "preview": {
+          "command": "echo 'Skipping deploy'"
+        },
+        "production": {
+          "command": "tools/deploy/ecs_deploy.sh"
+        }
+      }
     }
   }
 }
