--- a/apps/shelter-web/project.json
+++ b/apps/shelter-web/project.json
@@ -24,6 +24,7 @@
     },
     "build": {
       "executor": "@nx/vite:build",
+      "dependsOn": ["set-env"],
       "options": {
         "outputPath": "dist/apps/shelter-web",
         "configFile": "apps/shelter-web/vite.config.mts"
