--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -69,21 +69,21 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       # Build Monorepo Image for each commit using GitHub Actions cache
-      - name: 🏗️ Build Monorepo Docker image
-        uses: docker/build-push-action@v6
-        with:
-          file: Dockerfile
-          load: true
-          tags: |
-            ${{ env.MONOREPO_IMAGE }}:${{ env.DOCKER_TAG }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+      # - name: 🏗️ Build Monorepo Docker image
+      #   uses: docker/build-push-action@v6
+      #   with:
+      #     file: Dockerfile
+      #     load: true
+      #     tags: |
+      #       ${{ env.MONOREPO_IMAGE }}:${{ env.DOCKER_TAG }}
+      #     cache-from: type=gha
+      #     cache-to: type=gha,mode=max
 
-      - name: 🔑 Prep Container Permissions
-        run: |
-          sudo chown -R 1000:1000 .git
-          sudo setfacl --modify user:1000:rw /var/run/docker.sock
-          sudo setfacl -Rm u:1000:rwX,d:u:1000:rwX $HOME/.docker
+      # - name: 🔑 Prep Container Permissions
+      #   run: |
+      #     sudo chown -R 1000:1000 .git
+      #     sudo setfacl --modify user:1000:rw /var/run/docker.sock
+      #     sudo setfacl -Rm u:1000:rwX,d:u:1000:rwX $HOME/.docker
 
       - name: 🐳 Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
