--- a/apps/betterangels-backend/project.json
+++ b/apps/betterangels-backend/project.json
@@ -139,13 +139,7 @@
     "post-pr-preview": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "node tools/scripts/post-preview-comment.js --url=https://shelter.dev.betterangels.la/$VITE_APP_BASE_PATH",
-        "env": {
-          "GITHUB_TOKEN": "${GITHUB_TOKEN}",
-          "GITHUB_REPOSITORY": "${GITHUB_REPOSITORY}",
-          "GITHUB_EVENT_PATH": "${GITHUB_EVENT_PATH}"
-        }
-      }
+        "command": "node tools/scripts/post-preview-comment.js --url=https://shelter.dev.betterangels.la/$VITE_APP_BASE_PATH"
     },
     "test": {
       "executor": "@nxlv/python:run-commands",
