Do it in compose

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -186,12 +186,16 @@ jobs:
 
       - name: 🚀 Deploy Changes
         run: |
+          docker compose run better-angels bash <<'EOF'
           yarn nx affected -t deploy --exclude=^betterangels$,^shelter$,^nginx$ --configuration preview
+          EOF
 
       - name: 💬 Post preview link to PR
         if: github.event_name == 'pull_request'
         run: |
+          docker compose run better-angels bash <<'EOF'
           yarn nx affected -t post-pr-preview
+          EOF
 
       - name: ⏹️ Spin down monorepo environment
         if: always()
