--- a/docker-compose-ci.yml
+++ b/docker-compose-ci.yml
@@ -18,7 +18,9 @@ services:
       - IMAGE_TAG_PREFIX
       - DOCKER_TAG
       - GITHUB_ACTIONS
+      - GITHUB_EVENT_PATH
       - GITHUB_REPOSITORY
+      - GITHUB_TOKEN
       - MONOREPO_IMAGE
       - AWS_DEFAULT_REGION
       - AWS_ACCESS_KEY_ID
