--- a/apps/shelter-web/project.json
+++ b/apps/shelter-web/project.json
@@ -44,6 +44,12 @@
         "preview": {}
       },
       "dependsOn": ["build"]
+    },
+    "post-pr-preview": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "node tools/scripts/post-preview-comment.js --url=https://shelter.dev.betterangels.la/$VITE_APP_BASE_PATH"
+      }
     }
   }
 }
