--- a/apps/shelter/package.json
+++ b/apps/shelter/package.json
@@ -3,65 +3,174 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@expo/vector-icons": "*",
-    "react": "*",
-    "react-native": "*",
-    "expo-router": "*",
-    "expo-web-browser": "*",
-    "expo": "*",
-    "jest-expo": "*",
-    "@nx/devkit": "*",
-    "@nx/eslint": "*",
-    "@nx/jest": "*",
-    "@nx/js": "*",
-    "@nx/react": "*",
-    "@nx/web": "*",
-    "@nx/webpack": "*",
-    "enhanced-resolve": "*",
-    "picocolors": "*",
-    "tsconfig-paths": "*",
-    "tslib": "*",
-    "@expo/metro-config": "*",
-    "metro-config": "*",
-    "react-native-svg-transformer": "*",
-    "@react-navigation/native": "*",
-    "expo-dev-client": "*",
-    "expo-font": "*",
-    "expo-status-bar": "*",
-    "@storybook/react-webpack5": "*",
-    "@storybook/react": "*",
-    "@storybook/react-native": "*",
-    "react-native-svg": "*",
-    "expo-image-manipulator": "*",
-    "expo-secure-store": "*",
-    "@testing-library/jest-native": "*",
-    "@testing-library/react-native": "*",
-    "@apollo/client": "*",
-    "@react-native-cookies/cookies": "*",
-    "apollo-link-rest": "*",
-    "apollo-upload-client": "*",
-    "@react-native-async-storage/async-storage": "*",
-    "expo-camera": "*",
-    "react-native-reanimated": "*",
-    "expo-clipboard": "*",
-    "react-native-paper": "*",
-    "date-fns": "*",
-    "@react-native-community/datetimepicker": "*",
-    "react-hook-form": "*",
-    "expo-image-picker": "*",
-    "@likashefqet/react-native-image-zoom": "*",
-    "react-native-gesture-handler": "*",
-    "expo-document-picker": "*",
-    "react-native-modal": "*",
-    "expo-file-system": "*",
-    "react-native-pdf": "*",
-    "@react-native-picker/picker": "*",
-    "react-native-safe-area-context": "*",
-    "react-native-select-dropdown": "*"
+    "@apollo/client": "^3.11.1",
+    "@config-plugins/react-native-blob-util": "^9.0.0",
+    "@config-plugins/react-native-pdf": "^9.0.0",
+    "@expo/metro-config": "0.19.9",
+    "@likashefqet/react-native-image-zoom": "^4.2.1",
+    "@portabletext/react": "^3.2.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-cookies/cookies": "^6.2.1",
+    "@react-native-picker/picker": "2.9.0",
+    "@sanity/client": "^6.27.1",
+    "@tanstack/react-query": "^5.64.2",
+    "@teovilla/react-native-web-maps": "^0.9.5",
+    "@vis.gl/react-google-maps": "^1.4.2",
+    "apollo-link-rest": "^0.9.0",
+    "apollo-upload-client": "^18.0.1",
+    "axios": "^1.8.2",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "expo": "^52.0.37",
+    "expo-apple-authentication": "~7.1.3",
+    "expo-auth-session": "~6.0.3",
+    "expo-build-properties": "~0.13.2",
+    "expo-camera": "~16.0.16",
+    "expo-clipboard": "~7.0.1",
+    "expo-constants": "~17.0.5",
+    "expo-dev-client": "~5.0.12",
+    "expo-document-picker": "^13.0.3",
+    "expo-font": "~13.0.3",
+    "expo-image-manipulator": "~13.0.6",
+    "expo-image-picker": "~16.0.6",
+    "expo-linking": "~7.0.5",
+    "expo-location": "~18.0.6",
+    "expo-router": "~4.0.17",
+    "expo-secure-store": "~14.0.1",
+    "expo-sharing": "~13.0.1",
+    "expo-splash-screen": "~0.29.22",
+    "expo-status-bar": "2.0.1",
+    "expo-updates": "~0.27.1",
+    "expo-web-browser": "~14.0.2",
+    "graphql": "^16.9.0",
+    "haversine-distance": "^1.2.3",
+    "i": "^0.3.7",
+    "jotai": "^2.10.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-ga4": "^2.1.0",
+    "react-hook-form": "^7.52.1",
+    "react-mailchimp-subscribe": "^2.1.3",
+    "react-native": "0.76.8",
+    "react-native-blob-util": "^0.21.2",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-keyboard-controller": "^1.13.0",
+    "react-native-maps": "1.18.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-open-maps": "^0.4.3",
+    "react-native-paper": "^5.12.5",
+    "react-native-pdf": "^6.7.7",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-select-dropdown": "^4.0.1",
+    "react-native-svg": "15.8.0",
+    "react-native-svg-transformer": "1.5.0",
+    "react-native-web": "0.19.13",
+    "react-router-dom": "6.11.2",
+    "remeda": "^2.20.0",
+    "tailwind-merge": "^2.5.5",
+    "tslib": "^2.3.0"
   },
   "scripts": {
     "eas-build-pre-install": "corepack enable",
     "eas-build-post-install": "cd ../../ && node tools/scripts/eas-build-post-install.mjs . apps/shelter"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@chromatic-com/storybook": "^3",
+    "@expo/metro-runtime": "4.0.1",
+    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/client-preset": "^4.3.2",
+    "@graphql-codegen/near-operation-file-preset": "^3.0.0",
+    "@graphql-codegen/typescript-react-apollo": "^4.3.0",
+    "@graphql-eslint/eslint-plugin": "^3.20.1",
+    "@iarna/toml": "^2.2.5",
+    "@nx-tools/container-metadata": "^6.1.1",
+    "@nx-tools/nx-container": "6.2.0",
+    "@nx/eslint": "20.7.0",
+    "@nx/eslint-plugin": "20.7.0",
+    "@nx/expo": "20.7.0",
+    "@nx/jest": "20.7.0",
+    "@nx/js": "20.7.0",
+    "@nx/react": "20.7.0",
+    "@nx/storybook": "20.7.0",
+    "@nx/vite": "20.7.0",
+    "@nx/web": "20.7.0",
+    "@nx/workspace": "20.7.0",
+    "@nxlv/python": "20.7.0",
+    "@storybook/addon-essentials": "8.5.5",
+    "@storybook/addon-react-native-web": "^0.0.24",
+    "@storybook/core-server": "8.5.5",
+    "@storybook/react-native": "^8.4.2",
+    "@storybook/react-webpack5": "8.5.5",
+    "@svgr/webpack": "^8.1.0",
+    "@swc-node/register": "1.9.2",
+    "@swc/cli": "~0.3.12",
+    "@swc/core": "1.5.29",
+    "@swc/helpers": "0.5.12",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "6.4.2",
+    "@testing-library/jest-native": "5.4.3",
+    "@testing-library/react": "16.1.0",
+    "@testing-library/react-native": "12.9.0",
+    "@types/apollo-upload-client": "^18.0.0",
+    "@types/google.maps": "^3.58.1",
+    "@types/jest": "29.5.14",
+    "@types/node": "18.19.14",
+    "@types/react": "~18.3.12",
+    "@types/react-dom": "~18.3.1",
+    "@types/react-mailchimp-subscribe": "^2.1.4",
+    "@typescript-eslint/eslint-plugin": "7.17.0",
+    "@typescript-eslint/parser": "7.17.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/ui": "^1.3.1",
+    "@yarnpkg/sdks": "^3.0.0-rc.48",
+    "autoprefixer": "10.4.13",
+    "babel-jest": "29.7.0",
+    "babel-plugin-react-native-web": "^0.19.8",
+    "babel-preset-expo": "12.0.7",
+    "babel-preset-vite": "^1.1.3",
+    "core-js": "3.36.1",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "10.1.1",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-native-a11y": "^3.3.0",
+    "jest": "29.7.0",
+    "jest-circus": "^29.4.1",
+    "jest-environment-jsdom": "29.7.0",
+    "jest-environment-node": "^29.4.1",
+    "jest-expo": "~52.0.5",
+    "jiti": "2.4.2",
+    "jsdom": "~22.1.0",
+    "metro": "^0.81.0",
+    "metro-react-native-babel-transformer": "^0.77.0",
+    "nx": "20.7.0",
+    "nx-cloud": "19.1.0",
+    "postcss": "8.4.38",
+    "prettier": "^2.6.2",
+    "react-test-renderer": "^18.3.0",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss": "3.4.17",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
+    "tslib": "^2.3.0",
+    "typescript": "~5.3.3",
+    "vite": "6.2.4",
+    "vite-plugin-svgr": "^4.3.0",
+    "vitest": "^1.6.1"
+  },
+  "resolutions": {
+    "cookie": ">=0.7.0",
+    "cross-spawn": ">=7.0.5",
+    "metro-resolver": "^0.81.0",
+    "metro-config": "^0.81.0",
+    "micromatch": ">=4.0.8",
+    "ws": ">=8.17.1"
+  }
 }
