--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -198,6 +198,8 @@ jobs:
           EOF
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
+          GITHUB_EVENT_PATH: ${{ github.event_path }}
 
       - name: ⏹️ Spin down monorepo environment
         if: always()
