--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -22,6 +22,7 @@ jobs:
       id-token: write # Required for requesting the JWT
       pull-requests: read
       checks: write # Required for graphql inspector
+      issues: write # Required for preview comment posting
 
     steps:
       - name: 🚦 Turnstyle
