--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -81,7 +81,7 @@ jobs:
 
       - name: 🔑 Prep Container Permissions
         run: |
-          sudo chown -R 1000:1000 .git
+          sudo chown -R 1000:1000 /workspace
           sudo setfacl --modify user:1000:rw /var/run/docker.sock
           sudo setfacl -Rm u:1000:rwX,d:u:1000:rwX $HOME/.docker
 
@@ -205,4 +205,4 @@ jobs:
         if: always()
         run: |
           docker compose down
-          sudo chown -R 1001:1001 .git
+          sudo chown -R 1001:1001 /workspace
