Try within project.json

--- a/apps/shelter-web/project.json
+++ b/apps/shelter-web/project.json
@@ -30,8 +30,17 @@
         "configFile": "apps/shelter-web/vite.config.mts"
       },
       "configurations": {
-        "production": {},
-        "preview": {}
+        "production": {
+          "env": {
+            "VITE_SHELTER_API_URL": "https://api.prod.betterangels.la",
+            "VITE_APP_BASE_PATH": "/"
+          }
+        },
+        "preview": {
+          "env": {
+            "VITE_SHELTER_API_URL": "https://api.dev.betterangels.la"
+          }
+        }
       }
     },
     "deploy": {
@@ -41,14 +50,20 @@
       },
       "configurations": {
         "production": {},
-        "preview": {}
+        "preview": {
+          "env": {
+            "S3_BUCKET": "development-us-west-2-shelter-web",
+            "CF_DISTRIBUTION_ID": "E3O1PERRKPOUDF",
+            "ASSUME_ROLE": "arn:aws:iam::784154756963:role/github-actions-deploy"
+          }
+        }
       },
       "dependsOn": ["build"]
     },
     "post-pr-preview": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "echo \"VITE_APP_BASE_PATH is: $VITE_APP_BASE_PATH\" && node tools/scripts/post-preview-comment.js --url=https://shelters.dev.betterangels.la$VITE_APP_BASE_PATH"
+        "command": "node tools/scripts/post-preview-comment.js --url=https://shelters.dev.betterangels.la$VITE_APP_BASE_PATH"
       }
     }
   }
