Pass environment preview

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -16,6 +16,7 @@ env:
 jobs:
   BuildTestDeploy:
     runs-on: ubuntu-latest
+    environment: preview
     permissions:
       actions: read # Required to find the last successful workflow run
       contents: read # Required for actions/checkout
