--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -15,8 +15,16 @@ env:
 
 jobs:
   BuildTestDeploy:
+    strategy:
+      fail-fast: false
+      matrix:
+        environment: [preview, production]
+
     runs-on: ubuntu-latest
-    environment: preview
+    # Skip the production slice on PRs
+    if: ${{ github.ref == 'refs/heads/main' || matrix.environment == 'preview' }}
+
+    environment: ${{ matrix.environment }}
     permissions:
       actions: read # Required to find the last successful workflow run
       contents: read # Required for actions/checkout
@@ -95,100 +103,99 @@ jobs:
 
       - name: 🐳 Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v2
-        if: ${{ env.BRANCH_NAME == 'main' }}
+        if: matrix.environment == 'production'
 
       - name: 🔄 Spin up monorepo environment
         run: |
           docker compose up -d
 
-      # - name: 🧹 Lint
-      #   run: |
-      #     docker compose run better-angels bash <<'EOF'
-      #     yarn nx affected -t lint
-      #     EOF
+      - name: 🧹 Lint
+        run: |
+          docker compose run better-angels bash <<'EOF'
+          yarn nx affected -t lint
+          EOF
 
-      # - name: 🕵️ Check for missing Django migrations
-      #   run: |
-      #     docker compose run better-angels bash <<'EOF'
-      #     yarn nx affected -t check-migrations
-      #     STATUS=$?
-      #     if [ $STATUS -ne 0 ]; then
-      #       echo "Error: Missing Django migrations! Make sure you have run 'python manage.py makemigrations <app_name>' locally and committed the changes."
-      #       exit 1
-      #     else
-      #       echo "Success: No missing Django migrations!"
-      #     fi
-      #     EOF
+      - name: 🕵️ Check for missing Django migrations
+        run: |
+          docker compose run better-angels bash <<'EOF'
+          yarn nx affected -t check-migrations
+          STATUS=$?
+          if [ $STATUS -ne 0 ]; then
+            echo "Error: Missing Django migrations! Make sure you have run 'python manage.py makemigrations <app_name>' locally and committed the changes."
+            exit 1
+          else
+            echo "Success: No missing Django migrations!"
+          fi
+          EOF
 
-      # - name: 📝 Make sure GraphQL Schema is up to date
-      #   # TODO: Upon graphql mismatch, a github action could commit the changes and push into the branch
-      #   run: |
-      #     docker compose run better-angels bash <<'EOF'
-      #     yarn nx run-many -t validate-graphql-schema
-      #     STATUS=$?
-      #     if [ $STATUS -ne 0 ]; then
-      #       echo "Error: The GraphQL schemas do not match! Make sure you have run 'yarn nx run-many -t generate-graphql-schema' locally and committed the changes."
-      #       exit 1
-      #     else
-      #       echo "Success: The GraphQL schemas match!"
-      #     fi
+      - name: 📝 Make sure GraphQL Schema is up to date
+        # TODO: Upon graphql mismatch, a github action could commit the changes and push into the branch
+        run: |
+          docker compose run better-angels bash <<'EOF'
+          yarn nx run-many -t validate-graphql-schema
+          STATUS=$?
+          if [ $STATUS -ne 0 ]; then
+            echo "Error: The GraphQL schemas do not match! Make sure you have run 'yarn nx run-many -t generate-graphql-schema' locally and committed the changes."
+            exit 1
+          else
+            echo "Success: The GraphQL schemas match!"
+          fi
 
-      #     yarn nx run-many -t generate-graphql-types
-      #     TYPE_GEN_STATUS=$?
-      #     git diff --exit-code;
-      #     DIFF_STATUS=$?
-      #     if [ $TYPE_GEN_STATUS -ne 0 ] || [ $DIFF_STATUS -ne 0 ]; then
-      #       echo "Error: The GraphQL types do not match or generation failed! Make sure you have run 'yarn nx run-many -t generate-graphql-types' locally and committed the changes."
-      #       exit 1
-      #     else
-      #       echo "Success: The GraphQL types match!"
-      #     fi
-      #     EOF
+          yarn nx run-many -t generate-graphql-types
+          TYPE_GEN_STATUS=$?
+          git diff --exit-code;
+          DIFF_STATUS=$?
+          if [ $TYPE_GEN_STATUS -ne 0 ] || [ $DIFF_STATUS -ne 0 ]; then
+            echo "Error: The GraphQL types do not match or generation failed! Make sure you have run 'yarn nx run-many -t generate-graphql-types' locally and committed the changes."
+            exit 1
+          else
+            echo "Success: The GraphQL types match!"
+          fi
+          EOF
 
-      # - name: 🕵🏻‍♂️ GraphQL Inspector
-      #   uses: kamilkisiela/graphql-inspector@master
-      #   # Warning: This now skips schema breaking checks in forked repositories.
-      #   # Resolve in: https://betterangels.atlassian.net/browse/DEV-690
-      #   if: ${{ github.event.pull_request.head.repo.fork == false }}
-      #   with:
-      #     github-token: ${{ secrets.GITHUB_TOKEN }}
-      #     schema: main:apps/betterangels-backend/schema.graphql
-      #     fail-on-breaking: true
-      #     approve-label: graphql-inspector:approved-breaking-change
+      - name: 🕵🏻‍♂️ GraphQL Inspector
+        uses: kamilkisiela/graphql-inspector@master
+        # Warning: This now skips schema breaking checks in forked repositories.
+        # Resolve in: https://betterangels.atlassian.net/browse/DEV-690
+        if: ${{ github.event.pull_request.head.repo.fork == false }}
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          schema: main:apps/betterangels-backend/schema.graphql
+          fail-on-breaking: true
+          approve-label: graphql-inspector:approved-breaking-change
 
-      # - name: 🔬 Typecheck
-      #   run: |
-      #     docker compose run better-angels bash <<'EOF'
-      #     yarn nx affected -t typecheck
-      #     EOF
+      - name: 🔬 Typecheck
+        run: |
+          docker compose run better-angels bash <<'EOF'
+          yarn nx affected -t typecheck
+          EOF
 
-      # - name: 🧪 Test
-      #   run: |
-      #     docker compose run better-angels bash <<'EOF'
-      #     # Exclude Betterangels Frontend Given its CI is not setup yet
-      #     yarn nx affected -t test
-      #     EOF
+      - name: 🧪 Test
+        run: |
+          docker compose run better-angels bash <<'EOF'
+          # Exclude Betterangels Frontend Given its CI is not setup yet
+          yarn nx affected -t test
+          EOF
 
-      # - name: 🛠️ Build and Push Artifacts
-      #   if: ${{ env.BRANCH_NAME == 'main' }}
-      #   run: |
-      #     docker compose run better-angels bash <<'EOF'
-      #     # Exclude Betterangels Frontend Given its CI is not setup yet
-      #     yarn nx affected -t build --exclude=^betterangels$,^shelter$
-      #     EOF
-      #   env:
-      #     AWS_ACCOUNT_ID: ${{ env.AWS_ACCOUNT_ID }}
-      #     INPUT_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: 🛠️ Build and Push Artifacts
+        run: |
+          docker compose run better-angels bash <<'EOF'
+          # Exclude Betterangels Frontend Given its CI is not setup yet
+          yarn nx affected -t build --exclude=^betterangels$,^shelter$ --configuration ${{ matrix.environment }}
+          EOF
+        env:
+          AWS_ACCOUNT_ID: ${{ env.AWS_ACCOUNT_ID }}
+          INPUT_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # - name: 🏗️ Push Monorepo Docker image
-      #   if: ${{ env.BRANCH_NAME == 'main' }}
-      #   run: |
-      #     docker push ${{ env.MONOREPO_IMAGE }}:${{ env.DOCKER_TAG }}
+      - name: 🏗️ Push Monorepo Docker image
+        if: matrix.environment == 'production'
+        run: |
+          docker push ${{ env.MONOREPO_IMAGE }}:${{ env.DOCKER_TAG }}
 
       - name: 🚀 Deploy Changes
         run: |
           docker compose run better-angels bash <<'EOF'
-          yarn nx affected -t deploy --exclude=^betterangels$,^shelter$,^nginx$ --configuration preview
+          yarn nx affected -t deploy --exclude=^betterangels$,^shelter$ --configuration=${{ matrix.environment }}
           EOF
         env:
           VITE_SHELTER_GOOGLE_MAPS_API_KEY: ${{ secrets.VITE_SHELTER_GOOGLE_MAPS_API_KEY }}
