--- a/docker-compose-ci.yml
+++ b/docker-compose-ci.yml
@@ -5,8 +5,9 @@ services:
       - ${GITHUB_WORKSPACE}:/workspace # Mounts the full repository
       - ${HOME}/.docker/:/home/betterangels/.docker/
       - ${GITHUB_EVENT_PATH}:${GITHUB_EVENT_PATH}:ro
-      # Mount an anonymous volume to override node_modules
+      # Mount an anonymous volume to override
       - /workspace/node_modules
+      - /workspace/.venv
     working_dir: /workspace
     # Pass in GitHub Actions Envs into the container
     environment:
