--- a/apps/nginx/project.json
+++ b/apps/nginx/project.json
@@ -26,7 +26,10 @@
       },
       "configurations": {
         "preview": {
-          "command": "echo 'Skipping build'"
+          "executor": "nx:run-commands",
+          "options": {
+            "command": "echo 'Skipping build'"
+          }
         }
       }
     },
