--- a/docker-compose-ci.yml
+++ b/docker-compose-ci.yml
@@ -2,8 +2,12 @@ services:
   better-angels:
     image: ${MONOREPO_IMAGE}:${DOCKER_TAG}
     volumes:
-      - .git:/workspace/.git
+      - ${GITHUB_WORKSPACE}:/workspace # Mounts the full repository
       - ${HOME}/.docker/:/home/betterangels/.docker/
+      - ${GITHUB_EVENT_PATH}:${GITHUB_EVENT_PATH}:ro
+      # Mount an anonymous volume to override
+      - /workspace/node_modules
+      - /workspace/.venv
     working_dir: /workspace
     # Pass in GitHub Actions Envs into the container
     environment:
@@ -18,10 +22,14 @@ services:
       - IMAGE_TAG_PREFIX
       - DOCKER_TAG
       - GITHUB_ACTIONS
+      - GITHUB_EVENT_PATH
       - GITHUB_REPOSITORY
+      - GITHUB_TOKEN
       - MONOREPO_IMAGE
       - AWS_DEFAULT_REGION
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
       - AWS_SESSION_TOKEN
       - INPUT_GITHUB_TOKEN
+      # App Secrets
+      - VITE_SHELTER_GOOGLE_MAPS_API_KEY
