--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       # Update this to wherever you want VS Code to mount the folder of your project
       - .:/workspace:cached
       - node_modules:/workspace/node_modules
-      - venv:/workspace/.venv
+      - venv:/home/betterangels/.venvs
       - .bash_aliases:/home/betterangels/.bash_aliases
 
     # Uncomment the next four lines if you will use a ptrace-based debugger like C++, Go, and Rust.
