--- a/docker-compose-ci.yml
+++ b/docker-compose-ci.yml
@@ -1,5 +1,6 @@
 services:
   better-angels:
+    image: 0c365cbbe229
     image: ${MONOREPO_IMAGE}:${DOCKER_TAG}
     volumes:
       - ${GITHUB_WORKSPACE}:/workspace # Mounts the full repository
