--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "react-native-open-maps": "^0.4.3",
     "react-native-paper": "^5.12.5",
     "react-native-pdf": "^6.7.7",
-    "react-native-reanimated": "~3.17.4",
+    "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-select-dropdown": "^4.0.1",
@@ -132,6 +132,7 @@
     "@types/react": "~19.0.10",
     "@types/react-dom": "~18.3.1",
     "@types/react-mailchimp-subscribe": "^2.1.4",
+    "@types/react-native": "^0.73.0",
     "@typescript-eslint/eslint-plugin": "7.17.0",
     "@typescript-eslint/parser": "7.17.0",
     "@vitejs/plugin-react": "^4.2.0",
@@ -179,7 +180,6 @@
     "metro-resolver": "^0.81.0",
     "metro-config": "^0.81.0",
     "micromatch": ">=4.0.8",
-    "react-native-maps": "1.23.7",
     "ws": ">=8.17.1"
   },
   "engines": {
