See if this builds

--- a/package.json
+++ b/package.json
@@ -176,8 +176,8 @@
   "resolutions": {
     "cookie": ">=0.7.0",
     "cross-spawn": ">=7.0.5",
-    "metro-resolver": "^0.81.0",
-    "metro-config": "^0.81.0",
+    "metro-resolver": ">=0.82.0",
+    "metro-config": ">=0.82.0",
     "micromatch": ">=4.0.8",
     "ws": ">=8.17.1"
   },
