--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-native-blob-util": "^0.21.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-keyboard-controller": "^1.13.0",
+    "react-native-map-clustering": "^3.4.2",
     "react-native-maps": "1.20.1",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-open-maps": "^0.4.3",
