--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@apollo/client": "^3.11.1",
     "@config-plugins/react-native-blob-util": "^9.0.0",
     "@config-plugins/react-native-pdf": "^9.0.0",
-    "@expo/metro-config": "0.19.9",
+    "@expo/metro-config": "~0.20.0",
     "@likashefqet/react-native-image-zoom": "^4.2.1",
     "@portabletext/react": "^3.2.0",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.3.0",
     "@react-native-cookies/cookies": "^6.2.1",
-    "@react-native-picker/picker": "2.9.0",
+    "@react-native-picker/picker": "2.11.0",
     "@sanity/client": "^6.27.1",
     "@tanstack/react-query": "^5.64.2",
     "@teovilla/react-native-web-maps": "^0.9.5",
@@ -33,54 +33,54 @@
     "axios": "^1.8.2",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "expo": "^52.0.37",
-    "expo-apple-authentication": "~7.1.3",
-    "expo-auth-session": "~6.0.3",
-    "expo-build-properties": "~0.13.2",
-    "expo-camera": "~16.0.16",
-    "expo-clipboard": "~7.0.1",
-    "expo-constants": "~17.0.5",
-    "expo-dev-client": "~5.0.19",
-    "expo-document-picker": "^13.0.3",
-    "expo-font": "~13.0.3",
-    "expo-image-manipulator": "~13.0.6",
-    "expo-image-picker": "~16.0.6",
-    "expo-linking": "~7.0.5",
-    "expo-location": "~18.0.10",
-    "expo-router": "~4.0.20",
-    "expo-secure-store": "~14.0.1",
-    "expo-sharing": "~13.0.1",
-    "expo-splash-screen": "~0.29.22",
-    "expo-status-bar": "2.0.1",
-    "expo-updates": "~0.27.1",
-    "expo-web-browser": "~14.0.2",
+    "expo": "53",
+    "expo-apple-authentication": "~7.2.2",
+    "expo-auth-session": "~6.1.3",
+    "expo-build-properties": "~0.14.4",
+    "expo-camera": "~16.1.3",
+    "expo-clipboard": "~7.1.2",
+    "expo-constants": "~17.1.2",
+    "expo-dev-client": "~5.1.3",
+    "expo-document-picker": "~13.1.3",
+    "expo-font": "~13.3.1",
+    "expo-image-manipulator": "~13.1.3",
+    "expo-image-picker": "~16.1.2",
+    "expo-linking": "~7.1.2",
+    "expo-location": "~18.1.2",
+    "expo-router": "~5.0.6",
+    "expo-secure-store": "~14.2.1",
+    "expo-sharing": "~13.1.3",
+    "expo-splash-screen": "~0.30.5",
+    "expo-status-bar": "~2.2.1",
+    "expo-updates": "~0.28.6",
+    "expo-web-browser": "~14.1.4",
     "graphql": "^16.9.0",
     "haversine-distance": "^1.2.3",
     "i": "^0.3.7",
     "jotai": "^2.10.3",
     "libphonenumber-js": "^1.12.6",
     "newrelic-react-native-agent": "^1.5.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-ga4": "^2.1.0",
     "react-hook-form": "^7.52.1",
     "react-mailchimp-subscribe": "^2.1.3",
-    "react-native": "0.76.9",
+    "react-native": "0.79.2",
     "react-native-blob-util": "^0.21.2",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-keyboard-controller": "^1.13.0",
-    "react-native-maps": "1.18.0",
-    "react-native-modal": "^13.0.1",
+    "react-native-maps": "1.20.1",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-open-maps": "^0.4.3",
     "react-native-paper": "^5.12.5",
     "react-native-pdf": "^6.7.7",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-reanimated": "~3.17.5",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
     "react-native-select-dropdown": "^4.0.1",
-    "react-native-svg": "15.8.0",
+    "react-native-svg": "15.11.2",
     "react-native-svg-transformer": "1.5.0",
-    "react-native-web": "0.19.13",
+    "react-native-web": "^0.20.0",
     "react-router-dom": "6.11.2",
     "remeda": "^2.20.0",
     "tailwind-merge": "^2.5.5",
@@ -91,7 +91,7 @@
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
     "@chromatic-com/storybook": "^3",
-    "@expo/metro-runtime": "4.0.1",
+    "@expo/metro-runtime": "~5.0.2",
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/client-preset": "^4.3.2",
     "@graphql-codegen/near-operation-file-preset": "^3.0.0",
@@ -100,22 +100,22 @@
     "@iarna/toml": "^2.2.5",
     "@nx-tools/container-metadata": "^6.1.1",
     "@nx-tools/nx-container": "6.2.0",
-    "@nx/eslint": "20.7.2",
-    "@nx/eslint-plugin": "20.7.2",
-    "@nx/expo": "20.7.2",
-    "@nx/jest": "20.7.2",
-    "@nx/js": "20.7.2",
-    "@nx/react": "20.7.2",
-    "@nx/storybook": "20.7.2",
-    "@nx/vite": "20.7.2",
-    "@nx/web": "20.7.2",
-    "@nx/workspace": "20.7.2",
-    "@nxlv/python": "20.7.0",
-    "@storybook/addon-essentials": "8.5.5",
-    "@storybook/addon-react-native-web": "^0.0.24",
-    "@storybook/core-server": "8.5.5",
+    "@nx/eslint": "21.0.1",
+    "@nx/eslint-plugin": "21.0.1",
+    "@nx/expo": "21.0.1",
+    "@nx/jest": "21.0.1",
+    "@nx/js": "21.0.1",
+    "@nx/react": "21.0.1",
+    "@nx/storybook": "21.0.1",
+    "@nx/vite": "21.0.1",
+    "@nx/web": "21.0.1",
+    "@nx/workspace": "21.0.1",
+    "@nxlv/python": "20.15.1",
+    "@storybook/addon-essentials": "8.6.12",
+    "@storybook/addon-react-native-web": "^0.0.29",
+    "@storybook/core-server": "8.6.12",
     "@storybook/react-native": "^8.4.2",
-    "@storybook/react-webpack5": "8.5.5",
+    "@storybook/react-webpack5": "8.6.12",
     "@svgr/webpack": "^8.1.0",
     "@swc-node/register": "1.9.2",
     "@swc/cli": "0.6.0",
@@ -125,13 +125,13 @@
     "@testing-library/jest-dom": "6.4.2",
     "@testing-library/jest-native": "5.4.3",
     "@testing-library/react": "16.1.0",
-    "@testing-library/react-native": "12.9.0",
+    "@testing-library/react-native": "13.2.0",
     "@types/apollo-upload-client": "^18.0.0",
     "@types/google.maps": "^3.58.1",
     "@types/jest": "29.5.14",
     "@types/node": "18.19.14",
-    "@types/react": "~18.3.12",
-    "@types/react-dom": "~18.3.1",
+    "@types/react": "~19.0.10",
+    "@types/react-dom": "~19.0.1",
     "@types/react-mailchimp-subscribe": "^2.1.4",
     "@typescript-eslint/eslint-plugin": "7.17.0",
     "@typescript-eslint/parser": "7.17.0",
@@ -141,7 +141,7 @@
     "autoprefixer": "10.4.13",
     "babel-jest": "29.7.0",
     "babel-plugin-react-native-web": "^0.19.8",
-    "babel-preset-expo": "12.0.7",
+    "babel-preset-expo": "~13.0.0",
     "babel-preset-vite": "^1.1.3",
     "core-js": "3.36.1",
     "eslint": "8.57.0",
@@ -155,22 +155,21 @@
     "jest-circus": "^29.4.1",
     "jest-environment-jsdom": "29.7.0",
     "jest-environment-node": "^29.4.1",
-    "jest-expo": "~52.0.5",
+    "jest-expo": "~53.0.5",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
-    "metro": "^0.81.0",
+    "metro": "^0.82.0",
     "metro-react-native-babel-transformer": "^0.77.0",
-    "nx": "20.7.2",
+    "nx": "21.0.1",
     "nx-cloud": "19.1.0",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
-    "react-test-renderer": "^18.3.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "3.4.17",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "~5.3.3",
+    "typescript": "~5.8.3",
     "vite": "6.2.4",
     "vite-plugin-svgr": "^4.3.0",
     "vitest": "^1.6.1"
@@ -178,8 +177,8 @@
   "resolutions": {
     "cookie": ">=0.7.0",
     "cross-spawn": ">=7.0.5",
-    "metro-resolver": "^0.81.0",
-    "metro-config": "^0.81.0",
+    "metro-resolver": ">=0.82.0",
+    "metro-config": ">=0.82.0",
     "micromatch": ">=4.0.8",
     "ws": ">=8.17.1"
   },
