--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "newrelic-react-native-agent": "^1.5.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-fast-compare": "^3.2.2",
     "react-ga4": "^2.1.0",
     "react-hook-form": "^7.52.1",
     "react-mailchimp-subscribe": "^2.1.3",
